# whatsapp-agent-cli

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
bridge/: allowlist.js  bridge.js  package.json
scripts/: bootstrap.sh  install.sh  pair.sh  start.sh  stop.sh
server/: gateway.py
src/whatsapp_agent/: __init__.py  cli.py
systemd/: agent-whatsapp.service  codex-whatsapp.service
