[project]
name = "whatsapp-agent-cli"
version = "0.1.13"
description = "Run a coding CLI (codex / claude) behind a dedicated WhatsApp number."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Krishna Paikine", email = "krishnapaikine777@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "whatsapp",
    "claude",
    "codex",
    "anthropic",
    "openai",
    "coding-agent",
    "cli",
    "baileys",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]

dependencies = []

[project.optional-dependencies]
dev = ["build", "twine", "ruff"]

[project.urls]
Homepage = "https://github.com/kalki-kgp/whatsapp-agent-cli"
Repository = "https://github.com/kalki-kgp/whatsapp-agent-cli"
Issues = "https://github.com/kalki-kgp/whatsapp-agent-cli/issues"

[project.scripts]
whatsapp-agent = "whatsapp_agent.cli:main"
whatsapp-agent-cli = "whatsapp_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_agent"]

# Ship the bash + node runtime inside the wheel so the CLI can copy it into
# ~/.agent-whatsapp on first install (no git clone required at runtime).
[tool.hatch.build.targets.wheel.force-include]
"bridge"           = "whatsapp_agent/_runtime/bridge"
"server"           = "whatsapp_agent/_runtime/server"
"scripts"          = "whatsapp_agent/_runtime/scripts"
"systemd"          = "whatsapp_agent/_runtime/systemd"
"requirements.txt" = "whatsapp_agent/_runtime/requirements.txt"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "bridge/",
    "server/",
    "scripts/",
    "systemd/",
    "requirements.txt",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
